# AI_contract_generator

./: .gitignore  Dockerfile  README.md  api.py  docker-compose.yml  env.template  index.html  out.txt  pyproject.toml  pytest.ini  requirements.txt  setup.sh
contracts/: loan_agreement.txt
src/: agent_runner.py  cli.py  main.py  search.py
src/agent_ai/: agent_runner.py  cli.py  cli_2.py  langfuse_client.py  langfuse_provider.py  main.py
src/agent_ai/config/: model_provider.py
src/agent_ai/custom_agents/: contract_agent.py
src/agent_ai/prompts/: contract_prompt.py  dispatcher.py
src/agent_ai/tools/: save_tools.py
src/agents/: contract_agent.py
src/ai_agent_layerx.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/config/: model_provider.py
src/core/: agent_runner.py  judge.py  model_provider.py
src/custom_agents/: contract_agent.py  contract_review_agent.py
src/prompts/: contract_prompt.py  dispatcher.py  review_prompt.py
src/tools/: document_reader.py  save_tool.py  save_tools.py
tests/: test_agent_runner.py  test_cli.py  test_contract_prompts.py  test_contract_validation.py  test_dispatcher.py  test_model_provider.py  test_run_contract.py  test_save_tool.py
