[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agent"
version = "0.1.0"
description = "AI Agent for generating and managing business contracts with web interface."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "AI Agent Team", email = "team@example.com" },
]
keywords = ["AI", "Agent", "Contract Generation", "LLM", "FastAPI", "Web UI", "Legal Tech"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Legal Industry",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business",
    "Topic :: Text Processing :: Linguistic",
    "Framework :: FastAPI",
]

dependencies = [
    # Core AI and Agent Framework
    "openai-agents==0.0.19",
    "openai==1.90.0",
    "langfuse==3.0.5",
    
    # Web Framework
    "fastapi==0.115.14",
    "uvicorn[standard]==0.34.3",
    "python-multipart==0.0.20",
    
    # Data Validation and Processing
    "pydantic==2.11.7",
    "pydantic-settings==2.10.1",
    
    # Environment and Configuration
    "python-dotenv==1.1.0",
    
    # HTTP and Networking (required by dependencies)
    "httpx==0.28.1",
    "requests==2.32.4",
    
    # Standard Python libraries (required by dependencies)
    "click==8.2.1",
    "typing-extensions==4.14.0",
]

[project.scripts]
ai_agent = "main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[project.optional-dependencies]
dev = [
    "pytest==8.4.1",
    "pytest-asyncio==1.0.0",
    "types-requests==2.32.4.20250611",
]

[project.urls]
Homepage = "https://github.com/yourusername/ai-agent"
Documentation = "https://github.com/yourusername/ai-agent#readme"
Repository = "https://github.com/yourusername/ai-agent.git"
Issues = "https://github.com/yourusername/ai-agent/issues"